--- a/index.html
+++ b/index.html
@@ -33,24 +33,44 @@
 </head>
 <body class="text-center">
 
-<div class="avatar">
-    <img src="assets/images/meSky.jpg" alt="AitchKay">
-    <div class="pulse"></div>
-</div>
+   <h1>Coding as Hobby</h1>
+   
+  <div class="container-fluid">
+      <div class="row">
+          <div class="col-md-2">
+            <div class="sidenav">
+                <div class="avatar">
+                    <img src="assets/images/meSky.jpg" alt="AitchKay">
+                    <div class="pulse"></div>
+                </div>
+                <h3>Hamayun Aziz</h3>
+                    <ul class="social-list">
+                        <li>
+                            <a href="https://github.com/hamayunaziz"><i class="fa fa-github"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/TheCodonist"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://web.facebook.com/codonist"><i class="fa fa-facebook"></i></a>
+                        </li>
+                    </ul>
+              
+            </div>
+          </div>
+          <div class="col-md-10">
+            <p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="result" data-user="codonist" data-slug-hash="zYxVjZz" style="height: 287px; box-sizing: border-box;  align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="SVG logo loader">
+                <span>See the Pen <a href="https://codepen.io/codonist/pen/zYxVjZz">
+                SVG logo loader</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+              </p>
+              <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          </div>
+      </div>
+  </div>
+   
 
 
-<h3>Hamayun Aziz</h3>
-<ul class="social-list">
-    <li>
-        <a href="https://github.com/hamayunaziz"><i class="fa fa-github"></i></a>
-    </li>
-    <li>
-        <a href="https://twitter.com/TheCodonist"><i class="fa fa-twitter"></i></a>
-    </li>
-    <li>
-        <a href="https://web.facebook.com/codonist"><i class="fa fa-facebook"></i></a>
-    </li>
-</ul>
 
 <!-- JavaScript
 ================================================== -->
