--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
                     <div class="pulse"></div>
                 </div>
                 <h3>Hamayun Aziz</h3>
-                <p class="content">The illusion of movement created through a sequence of images is one of the most valuable things that animation
-                    has over other art forms
-                    "what i love about the animation is that everything we do is all about the imagination"
-                    coding is my passion as well as my hobby i love to share my perfection i do programming not because to get paid but 
+                <p class="content">"What i love about the animation is that everything we do is all about the imagination"
+                    coding is my passion as well as my hobby i love to share my perfection. I do programming not because to get paid but 
                     is fun to program and code</p>
                     <ul class="social-list">
                         <li>
