--- a/index.html
+++ b/index.html
@@ -62,15 +62,12 @@
 
     <div class="main">
         <h3>Blowing Bubbles</h3>
-        <p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="result" data-user="codonist"
-            data-slug-hash="GRjvMqq"
-            style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"
-            data-pen-title="Blowing Bubbles">
+            <p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="result" data-user="codonist" data-slug-hash="GRjvMqq" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Blowing Bubbles">
             <span>See the Pen <a href="https://codepen.io/codonist/pen/GRjvMqq">
-                    Blowing Bubbles</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
-                on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+            Blowing Bubbles</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
     </div>
 
 
