--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-
+   <!-- sidebar code -->
     <div class="sidenav">
         <div class="avatar">
             <img src="assets/images/meSky.jpg" alt="AitchKay">
@@ -55,24 +55,28 @@
             <li>
                 <a href="https://web.facebook.com/codonist"><i class="fa fa-facebook"></i></a>
             </li>
+            <li>
+                <a href="https://www.linkedin.com/in/hamayunaziz/"><i class="fa fa-linkedin"></i></a>
+            </li>
         </ul>
 
     </div>
+
+    <!-- blowing bubbles code -->
    
     <div class="main">
         <h1>Coding as Hobby</h1>
         <h3>Blowing Bubbles</h3>
-            <p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="result" data-user="codonist" data-slug-hash="GRjvMqq" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Blowing Bubbles">
+        <p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="result" data-user="codonist" data-slug-hash="GRjvMqq" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Blowing Bubbles">
             <span>See the Pen <a href="https://codepen.io/codonist/pen/GRjvMqq">
             Blowing Bubbles</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
             on <a href="https://codepen.io">CodePen</a>.</span>
-            </p>
-            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
     </div>
 
-
+    <!-- logo as loader code -->
     <div class="main">
-
         <h3>Logo as Loader</h3>
         <p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="result" data-user="codonist"
             data-slug-hash="zYxVjZz"
