--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="pulse"></div>
         </div>
         <h3>Hamayun Aziz</h3>
-        <p class="content">"What i love about the animation is that everything we do is all about the imagination"
-            coding is my passion as well as my hobby i love to share my perfection. I do programming not because to get
+        <p class="content">"What I love about the animation is that everything we do is all about the imagination"
+            coding is my passion as well as my hobby I love to share my perfection. I do programming not because to get
             paid but
             is fun to program and code</p>
         <ul class="social-list">
