--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
 
     <div class="main">
-        <h3>if so</h3>
-        <p class="codepen" data-height="400" data-theme-id="dark" data-default-tab="result" data-slug-hash="JjOgpzd" data-user="codonist" style="height: 287px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+        <h3>Moving Arrow</h3>
+        <p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="result" data-slug-hash="JjOgpzd" data-user="codonist" style="height: 287px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
             <span>See the Pen <a href="https://codepen.io/codonist/pen/JjOgpzd">
             if-so</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
             on <a href="https://codepen.io">CodePen</a>.</span>
@@ -104,12 +104,18 @@
     </div>
 
     <div class="main">
-        <h3>Studio Bouncing Balls</h3>
-        <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="MWrWaez" data-user="codonist" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+        <h3>Bouncing Balls</h3>
+        <p class="codepen" data-height="610" data-default-tab="result" data-slug-hash="MWrWaez" data-user="codonist" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
             <span>See the Pen <a href="https://codepen.io/codonist/pen/MWrWaez">
-            Studio Bouncing Balls</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
+            Bouncing Balls</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
             on <a href="https://codepen.io">CodePen</a>.</span>
           </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
           <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
     </div>
 
@@ -119,6 +125,41 @@
         <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="mdpdeRW" data-user="codonist" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
             <span>See the Pen <a href="https://codepen.io/codonist/pen/mdpdeRW">
             Bars Animation</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+    </div>
+
+    <div class="main">
+        <h3>Tyre Animation</h3>
+        <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="gOobXrM" data-user="codonist" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/codonist/pen/gOobXrM">
+            Tyre Animation</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+    </div>
+
+    <div class="main">
+        <h3>Stars Animation</h3>
+        <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="ExoawMe" data-user="codonist" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/codonist/pen/ExoawMe">
+            Stars Animation</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+    </div>
+
+    <div class="main">
+        <h3>Car and Flag Animation</h3>
+        <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="gOobRQx" data-user="codonist" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/codonist/pen/gOobRQx">
+            Car and flag Animation</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
             on <a href="https://codepen.io">CodePen</a>.</span>
           </p>
           <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
