--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- Custom styles -->
     <link href="assets/css/custom.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
+    
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -40,7 +41,7 @@
    <!-- sidebar code -->
     <div class="sidenav">
         <div class="avatar">
-            <img src="assets/images/meSky.jpg" alt="AitchKay">
+            <img src="https://codonist.bitbucket.io/assets/images/meSky.jpg" alt="AitchKay">
             <div class="pulse"></div>
         </div>
         <h3>Hamayun Aziz</h3>
