picture animation commit

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div class="avatar">
             <img src="https://codonist.bitbucket.io/assets/images/meSky.jpg" alt="AitchKay">
             <div class="pulse"></div>
+            <div class="SecondPulse"></div>
         </div>
         <h3>Hamayun Aziz</h3>
         <p class="content">"What I love about the animation is that everything we do is all about the imagination"
