--- a/demo/codonistPSD/index.html
+++ b/demo/codonistPSD/index.html
@@ -250,12 +250,12 @@
                         Your browser does not support the video tag.
                       </video>
                       <div class="row pt-5">
-                          <div class="col-lg-6 col-md-6 col-sm-6">
+                          <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="vedio__tumbnail pb-2">
                             <img class="img-fluid" src="./assets/img/cars-logos/tumbnail.png" alt="">
                             </div>
                           </div>
-                          <div class="col-lg-6 col-md-6 col-sm-6">
+                          <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="vedio__tumbnail  pb-2">
                             <img class="img-fluid" src="./assets/img/cars-logos/tumbnail-2.png" alt="">
                             </div>
@@ -548,22 +548,22 @@
         <div class="col-12 pb-5">
             <form>
                 <div class="row">
-                  <div class="col-lg-3 col-md-3 .col-sm-12 pb-2">
+                  <div class="col-lg-3 col-md-6 mb-md-2 .col-sm-12 pb-2">
                   <div class="intrest__form">
                     <input type="text" class="form-control" placeholder="Enter Name" name="email">
                   </div>
                   </div>
-                  <div class="col-lg-3 col-md-3 .col-sm-12 pb-2">
+                  <div class="col-lg-3 col-md-6 mb-md-2 .col-sm-12 pb-2">
                     <div class="intrest__form">
                         <input type="email" class="form-control" placeholder="Enter Email" name="email">
                       </div>
                   </div>
-                  <div class="col-lg-3 col-md-3 .col-sm-12 pb-2">
+                  <div class="col-lg-3 col-md-6 mb-md-2 .col-sm-12 pb-2">
                     <div class="intrest__form">
                         <input type="phone" class="form-control" placeholder="Enter Phone" name="email">
                       </div>
                   </div>
-                  <div class="col-lg-3 col-md-3 .col-sm-12 pb-2">
+                  <div class="col-lg-3 col-md-6 mb-md-2 .col-sm-12 pb-2">
                     <div class="intrest__form">
                     <a href="#" class="btn "><i class="fab fa-whatsapp"></i> send via whatsapp</a>
                     </div>
