--- a/demo/red/index.html
+++ b/demo/red/index.html
@@ -68,7 +68,7 @@
     <main id="home" class="masthead masked" data-stellar-background-ratio="0.8">
       <div class="opener rel-1">
         <div class="container">
-          <h1>Coding is not our Profession,<br> It's our Passion</h1>
+          <h1>Coding is not just my Profession,<br> It's my Passion</h1>
           <p class="lead-text wow fadeInUp">Envisioning to Digitalize the Universe of Ideas</p>
           <div class="control">
             <a href="#request" class="btn wow fadeInUp" data-wow-delay="0.2s" data-toggle="modal">Contact me</a>
@@ -87,7 +87,7 @@
         <div class="container">
           <div class="row-padding row-columns row">
             <div class="col-padding column col-md-6 col-md-push-6">
-            <h2 class="section-title">WHO WE ARE:</h2>
+            <h2 class="section-title">About ME:</h2>
             <p>There is the presence of passion in our abilities which nourishes our work. we are dedicated team of hard workers which leads you to achieve high goals in life.</p>
             <p>Our professional & well trained team uses latest coding standards with modern design & techniques to create high quality results and pays whole intention towards details, and retain their focus on needs of customers demand.</p>
             <p>We are not just a small team, we are creator, who’s creativity, uniqueness and thoughts will not provide you just a product but a true reality of your ideas.</p>
@@ -128,13 +128,162 @@
         </div>
       </section>
 
+
+      <!--  -->
+      <section class="our-skills">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="skills-bar">
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/html5-1.png" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">HTML 5</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/css-3.png" alt="css-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">CSS</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/sass.png" alt="sass-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">SASS</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/icons8-less-logo-256.png" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">Less</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/javascript.jpg" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">JavaScript</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/iconfinder_JQuery_logo_282806.png" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">Jquery</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+              </div>
+              </div>
+              <div class="col-md-6">
+                <div class="skills-bar">
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/Typescript.png" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">TypeScript</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/icons8-bootstrap-480.png" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">Bootstrap</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/icons8-vue-js-480.png" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">Vue Js</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div> 
+                  </div>
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/php.png" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">PHP</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/Wordpress.png" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">WordPress</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="section-skills-bar">
+                  <div class="progress-bar-title"><img src="./img/skills-image/icons8-git-480.png" alt="html-icon"></div>
+                  <div class="progress-bar-text">
+                    <div class="progress-bar-title">Git</div>
+                    <div class="progress">
+                      <div class="progress-bar" data-width="50">
+                        <span>50%</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+              </div>
+              </div>
+            </div>
+          </div>
+      </section>
+
       <!-- Resume -->
 
       <section id="resume" class="resume text-center  bgc-light section">
         <div class="container">
           <div class="row">
             <div class="text-center col-md-8 col-md-offset-2">
-              <h2 class="section-titler">View my resume</h2>
+              <h2 class="section-titler">View My Resume</h2>
               <p class="lead-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
             </div>
           </div> 
@@ -150,41 +299,50 @@
         <div class="container">
           <div class="row">
             <div class="text-center col-md-8 col-md-offset-2">
-              <h2 class="section-title">Services</h2>
-              <p class="lead-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+              <h2 class="section-title">Services I Can Provide</h2>
             </div>
           </div> 
         <div class="section-body">
           <div class="row-columns row">
           <div class="column col-md-4">
-            <i class="text-primary icon ion-speedometer"></i>
-            <h4>SEO</h4>
-            <p>Start your SEO optimization journey with our qualified team: better website – more traffic. Easy to use. Always one step ahead of your competitors. We offer […]</p>
-          </div>
-          <div class="column col-md-4">
-             <i class="text-primary icon ion-log-out"></i>
+            <i class="text-primary icon ion-monitor"></i> 
              <h4>Web Design</h4>
-               <p>Our Professional team of designers approach each new project logically, and work to highlight what’s important and what potential customers will look for. Our designs are […]</p>
-          </div>
-          <div class="column col-md-4">
-            <i class="text-primary icon ion-monitor"></i>     
-            <h4>Plugin Development</h4>
-              <p>We have a leading champion in the realm of WordPress Plugin development services, own a devoted team of experienced developers, who deliberately create bespoke plug-ins that […]</p>
+               <p>Our Professional team of designers approach each new project logically, and work to highlight what’s important 
+                and what potential customers will look for. Our designs are […]</p>
           </div>
           <div class="column col-md-4">
             <i class="text-primary icon ion-code"></i>
+            <h4>Web Development</h4>
+            <p>CODONIST specializes in website development services. Our web experiences are high-performing, feature-packed and 
+              digitally trans-formative, designed to be user-friendly, fully functional, very secure and able to […]</p>
+          </div>
+          <div class="column col-md-4"> 
+            <i class="text-primary icon ion-log-out"></i>   
+            <h4>Plugin Development</h4>
+              <p>We have a leading champion in the realm of WordPress Plugin development services, own a devoted team of experienced 
+                developers, who deliberately create bespoke plug-ins that […]</p>
+          </div>
+          </div>
+          <div class="row-columns row">
+          <div class="column col-md-4">
+            <i class="text-primary icon ion-speedometer"></i>
             <h4>WordPress</h4>
-            <p>We provide Codonist WordPress services with a team of dedicated WordPress developers with an awesome skill-set to complete your projects/websites. Developers at CODONIST can help you […]</p>
+            <p>We provide Codonist WordPress services with a team of dedicated WordPress developers with an awesome skill-set to complete 
+              your projects/websites. Developers at CODONIST can help you […]</p>
+          </div>
+          <div class="column col-md-4">
+            <i class="text-primary icon ion-wifi"></i>     
+            <h4>SEO</h4>
+              <p>
+                Start your SEO optimization journey with our qualified team: better website – more traffic. Easy to use. Always one step 
+                ahead of your competitors. We offer […]
+              </p>
           </div>
           <div class="column col-md-4">
              <i class="text-primary icon ion-radio-waves"></i>
              <h4>E-Commerce</h4>
-               <p>Get a Stunning Storefront & Powerful Management System to Run Your Online business. Our experts offer a complete portfolio of professional E-commerce services encompassing E-commerce consulting, […]</p>
-          </div>
-          <div class="column col-md-4">
-            <i class="text-primary icon ion-wifi"></i>     
-            <h4>Web Development</h4>
-              <p>CODONIST specializes in website development services. Our web experiences are high-performing, feature-packed and digitally trans-formative, designed to be user-friendly, fully functional, very secure and able to […]</p>
+               <p>Get a Stunning Storefront & Powerful Management System to Run Your Online business. Our experts offer a complete portfolio 
+                of professional E-commerce services encompassing E-commerce consulting, […]</p>
           </div>
         </div>
           </div>
@@ -197,7 +355,7 @@
         <div class="container">
           <div class="row">
             <div class="text-center col-md-8 col-md-offset-2">
-              <h2 class="section-title">Recent Works</h2>
+              <h2 class="section-title">Our Hardwork</h2>
             </div>
           </div> 
           <ul class="filter">
@@ -214,8 +372,7 @@
                   <div class="showcase-item-thumbnail"><img alt="" src="img/portfolio/1.png"></div>
                   <figcaption class="showcase-item-hover">
                     <div class="showcase-item-info">
-                      <div class="showcase-item-category">Branding</div>
-                      <div class="showcase-item-title">MAISONS IANNI</div>
+                      <div class="showcase-item-category">MAISONS IANNI</div>
                     </div>
                   </figcaption>
                 </figure>
@@ -227,8 +384,7 @@
                     <div class="showcase-item-thumbnail"><img alt="" src="img/portfolio/2.png"></div>
                     <figcaption class="showcase-item-hover">
                       <div class="showcase-item-info">
-                        <div class="showcase-item-category">Branding</div>
-                        <div class="showcase-item-title">ACRODIA</div>
+                        <div class="showcase-item-category">Majoitus</div>
                       </div>
                     </figcaption>
                   </figure>
@@ -240,8 +396,7 @@
                     <div class="showcase-item-thumbnail"><img alt="" src="img/portfolio/3.png"></div>
                     <figcaption class="showcase-item-hover">
                       <div class="showcase-item-info">
-                        <div class="showcase-item-category">Branding</div>
-                        <div class="showcase-item-title">Majoitus</div>
+                        <div class="showcase-item-category">Elevate Security</div>
                       </div>
                     </figcaption>
                   </figure>
@@ -253,8 +408,7 @@
                     <div class="showcase-item-thumbnail"><img alt="" src="img/portfolio/4.png"></div>
                     <figcaption class="showcase-item-hover">
                       <div class="showcase-item-info">
-                        <div class="showcase-item-category">Branding</div>
-                        <div class="showcase-item-title">Avidanbank</div>
+                        <div class="showcase-item-category">Carasti</div>
                       </div>
                     </figcaption>
                   </figure>
@@ -266,8 +420,7 @@
                     <div class="showcase-item-thumbnail"><img alt="" src="img/portfolio/5.png"></div>
                     <figcaption class="showcase-item-hover">
                       <div class="showcase-item-info">
-                        <div class="showcase-item-category">Branding</div>
-                        <div class="showcase-item-title">CAAFinancial</div>
+                        <div class="showcase-item-category">Builder Risk Form</div>
                       </div>
                     </figcaption>
                   </figure>
@@ -279,8 +432,7 @@
                     <div class="showcase-item-thumbnail"><img alt="" src="img/portfolio/6.jpg"></div>
                     <figcaption class="showcase-item-hover">
                       <div class="showcase-item-info">
-                        <div class="showcase-item-category">Branding</div>
-                        <div class="showcase-item-title">Carasti</div>
+                        <div class="showcase-item-category">Elevate Security</div>
                       </div>
                     </figcaption>
                   </figure>
@@ -296,8 +448,8 @@
         <div class="container">
           <div class="row">
             <div class="text-center col-md-8 col-md-offset-2">
-              <h2 class="section-title">Clients about me</h2>
-              <p class="lead-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+              <h2 class="section-title">Testimonial</h2>
+              <p class="lead-text">Helping Our Customers to Succeed in their Business Goals</p>
             </div>
           </div>
           <div class="section-body">
@@ -374,7 +526,7 @@
         <div class="container">
           <div class="row">
             <div class="text-center col-md-8 col-md-offset-2">
-              <h2 class="section-title">Keep in touch</h2>
+              <h2 class="section-title">Contact Us</h2>
             </div>
           </div>
           <div class="section-body">
@@ -423,6 +575,7 @@
                 <div class="media-right">
                   <h4>Email</h4>
                   hamayunaziz@codonist.com
+                  hamayunaziz@yahoo.com
                 </div>
               </div>
             </div> 
@@ -439,15 +592,14 @@
         <div class="row">
           <div class="col-md-5">
             <div class="social">
-              <a href="#" class="fa fa-facebook"></a>
-              <a href="#" class="fa fa-twitter"></a>
-              <a href="#" class="fa fa-pinterest"></a>
-              <a href="#" class="fa fa-youtube-play"></a>
+              <a href="https://www.facebook.com/codonist?_rdc=1&_rdr" class="fa fa-facebook"></a>
+              <a href="https://twitter.com/TheCodonist" class="fa fa-twitter"></a>
+              <a href="https://www.youtube.com/channel/UCL8CzN5J0vu1YDYxQGO2rdw" class="fa fa-youtube-play"></a>
             </div>
           </div>
           <div class="col-md-7 text-right-md">
             <div class="copy">
-              Copyright © 2020 by Codonist. All Rights Reserved.
+              Copyright © 2022 by Codonist. All Rights Reserved.
             </div>
           </div>
         </div>
