add typewriter library

--- a/demo/codonist-red-theme/index.html
+++ b/demo/codonist-red-theme/index.html
@@ -38,11 +38,8 @@
 
   <!-- Loader -->
 
-  <div class="loader">
-    <div class="spinner">
-    <div class="double-bounce1"></div>
-    <div class="double-bounce2"></div>
-  </div>
+  <div class="loaders">
+    <h2><span class="type"></span></h2>
   </div>
 
   <div id="layout" class="layout">
@@ -883,6 +880,7 @@
 <script src="./assetss/js/jquery.min.js"></script>
 <script src="./assetss/js/jquery.viewport.js"></script>
 <script src="./assetss/js/bootstrap.min.js"></script>
+<script src="assetss/js/typed.min.js"></script>
 <script src="./assetss/js/smoothscroll.js"></script>
 <script src="./assetss/js/wow.min.js"></script>
 <script src="./assetss/js/jquery.magnific-popup.min.js"></script>
