--- a/demo/animation/index.html
+++ b/demo/animation/index.html
@@ -13,61 +13,61 @@
    <section class="iq-features">
       <div class="container">
          <div class="row align-items-center">
-            <div class="col-lg-7 col-md-12 circle-bg">
+            <div class="col-lg-7 col-md-12">
                <div class="holderCircle">
-                  <div class="dotCircle" stylesa="transform: rotate(252deg); transition: all 2s ease 0s;">
-                     <div class="itemDot itemDot1" data-tab="1"></div>
-                     <div class="itemDot itemDot2" data-tab="2"></div>
-                     <div class="itemDot itemDot3" data-tab="3"></div>
-                     <div class="itemDot itemDot4" data-tab="4"></div>
-                     <div class="itemDot itemDot5" data-tab="5"></div>
-                     <div class="itemDot itemDot6" data-tab="6"></div>
+                  <div class="dotCircle">
+                     <div class="itemDot" data-tab="1"></div>
+                     <div class="itemDot" data-tab="2"></div>
+                     <div class="itemDot" data-tab="3"></div>
+                     <div class="itemDot" data-tab="4"></div>
+                     <div class="itemDot" data-tab="5"></div>
+                     <div class="itemDot" data-tab="6"></div>
                   </div>
                   <div class="contentCircle">
-                     <div class="CirItem title-box CirItem1" id="pic">
+                     <div class="CirItem CirItem1">
                         <img src="./images/uk1.JPG" alt="">
                      </div>
-                     <div class="CirItem title-box CirItem2" id="pic">
+                     <div class="CirItem CirItem2">
                         <img src="./images/uk1.JPG" alt="">
                      </div>
-                     <div class="CirItem title-box CirItem3" id="pic">
+                     <div class="CirItem CirItem3">
                         <img src="./images/uk1.JPG" alt="">
                      </div>
-                     <div class="CirItem title-box CirItem4" id="pic">
+                     <div class="CirItem CirItem4">
                         <img src="./images/uk1.JPG" alt="">
                      </div>
-                     <div class="CirItem title-box CirItem5" id="pic">
+                     <div class="CirItem CirItem5">
                         <img src="./images/uk1.JPG" alt="">
                      </div>
-                     <div class="CirItem title-box CirItem6" id="pic">
+                     <div class="CirItem CirItem6">
                         <img src="./images/uk1.JPG" alt="">
                      </div>
                   </div>
                </div>
             </div>
-            <div class="col-lg-5 col-md-12 love-graphic">
+            <div class="col-lg-5 col-md-12">
                <div class="contentCircle">
-                  <div class="CirItem title-box CirItem1">
+                  <div class="CirItem CirItem1">
                      <h4> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis aliquam at consequatur
                         necessitatibus! Expedita, </h4>
                   </div>
-                  <div class="CirItem title-box CirItem2">
+                  <div class="CirItem CirItem2">
+                     <h4>  dolor sit amet consectetur, adipisicing elit. Perspiciatis aliquam at consequatur
+                        necessitatibus! Expedita, </h4>
+                  </div>
+                  <div class="CirItem CirItem3">
                      <h4> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis aliquam at consequatur
                         necessitatibus! Expedita, </h4>
                   </div>
-                  <div class="CirItem title-box CirItem3">
+                  <div class="CirItem CirItem4">
                      <h4> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis aliquam at consequatur
                         necessitatibus! Expedita, </h4>
                   </div>
-                  <div class="CirItem title-box CirItem4">
+                  <div class="CirItem CirItem5">
                      <h4> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis aliquam at consequatur
                         necessitatibus! Expedita, </h4>
                   </div>
-                  <div class="CirItem title-box CirItem5">
-                     <h4> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis aliquam at consequatur
-                        necessitatibus! Expedita, </h4>
-                  </div>
-                  <div class="CirItem title-box CirItem6">
+                  <div class="CirItem CirItem6">
                      <h4> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis aliquam at consequatur
                         necessitatibus! Expedita, </h4>
                   </div>
